force-app/main/default/objects/Lead_Status_Action_Config__mdt/Lead_Status_Action_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration metadata that drives dynamic behavior of the Lead Status Update quick action. Each record maps a Lead_Status__c picklist value to the UI sections and validations that should appear when that status is selected.</description>
    <label>Lead Status Action Config</label>
    <pluralLabel>Lead Status Action Configs</pluralLabel>
</CustomObject>