force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/Disable_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Disable_FollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the Follow-Up section is completely hidden for this status (e.g., Booked, Unqualified).</description>
    <label>Disable Follow-Up</label>
    <type>Checkbox</type>
</CustomField>