force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/FollowUp_Default_Subject__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Default_Subject__c</fullName>
    <description>Optional default value to pre-fill in the Follow-Up Subject field.</description>
    <label>Follow-Up Default Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>