force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/FollowUp_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true (and Requires_FollowUp is true), all follow-up fields (Due Date, Subject, Notes) are mandatory.</description>
    <label>Follow-Up Mandatory</label>
    <type>Checkbox</type>
</CustomField>