force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active records are loaded by the Lead Status Update component.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>