force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/Requires_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Requires_FollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the Follow-Up section is shown and follow-up creation is expected.</description>
    <label>Requires Follow-Up</label>
    <type>Checkbox</type>
</CustomField>