force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/Requires_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Requires_Lost_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the Lost_Reason__c picklist is shown on the Lead update form.</description>
    <label>Requires Lost Reason</label>
    <type>Checkbox</type>
</CustomField>