force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/Requires_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Requires_Remarks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the Remarks textarea is shown and required.</description>
    <label>Requires Remarks</label>
    <type>Checkbox</type>
</CustomField>