force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/Requires_SiteVisit__c.field-meta.xml
<CustomField>
    <fullName>Requires_SiteVisit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the Site Visit section is shown and site visit creation is expected.</description>
    <label>Requires Site Visit</label>
    <type>Checkbox</type>
</CustomField>