force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Section_Label__c</fullName>
    <description>Optional custom section header text displayed for this status in the UI.</description>
    <label>Section Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>