force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/SiteVisit_Default_Status__c.field-meta.xml
<CustomField>
    <fullName>SiteVisit_Default_Status__c</fullName>
    <description>Default Status__c value for created Site Visit records (defaults to Scheduled if blank).</description>
    <label>Site Visit Default Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>