force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/SiteVisit_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>SiteVisit_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true (and Requires_SiteVisit is true), all site visit fields (Scheduled Date, Project) are mandatory.</description>
    <label>Site Visit Mandatory</label>
    <type>Checkbox</type>
</CustomField>