force-app/main/default/objects/Lead_Status_Action_Config__mdt/fields/Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Status_Value__c</fullName>
    <description>Exact Lead_Status__c picklist value this config applies to.</description>
    <label>Status Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>